--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@gnosis.pm/safe-ethers-lib": "^1.1.0",
     "@gnosis.pm/safe-service-client": "^1.1.2",
     "@gnosis.pm/safe-web3-lib": "^1.1.0",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.4",
     "web3": "^1.7.3"
